  * Packaging:
    * Add GitHub Workflows to build Debian Package for Debian 11 and Debian 12
    * Fix Build for Debian 12 / Ubuntu 24.04 (#47)
  * Documentation:
    * Include the README in the rendered documentation, converted to RST
    * Add conceptual overview graphics and some texts
  * sql:
    * Fix script to create `ip_endpoint` as superuser
  * tests:
    * fix runners
  * cli interface: better error message when format scripts did not generate a notification

 -- Sebastian Wagner <swagner@intevation.de>  Tue, 18 Mar 2025 09:23:02 +0100

intelmq-mailgen (1.3.6-1) stable; urgency=medium

  * gnupg: set home dir with parameter, not env variable
  * Documentation:
    * add docs on format specs
    * small fixes
    * render API docs

 -- Sebastian Wagner <swagner@intevation.de>  Fri, 30 Aug 2024 18:54:13 +0200

intelmq-mailgen (1.3.5-2) stable; urgency=medium

  * ScriptContext: Handle self.templates = None and read from directory
    (default with intelmqmail cli interface).

 -- Sebastian Wagner <swagner@intevation.de>  Tue, 16 Jan 2024 16:32:08 +0100

intelmq-mailgen (1.3.5-1) stable; urgency=medium

  * allow setting default table format by calling scripts
    is used if the called script (template) does not set one
    set an internal fallback value, if neither a default is provided, nor
    the script sets a table format

 -- Sebastian Wagner <swagner@intevation.de>  Fri, 08 Sep 2023 12:19:14 +0200

intelmq-mailgen (1.3.4-1) stable; urgency=medium

  * notifications: fix bug when templates are given as parameter
    due to a variable name clash, the loop over all templates, has set the
    fallback_template to a string, causing a type error

 -- Sebastian Wagner <swagner@intevation.de>  Fri, 30 Jun 2023 17:11:41 +0200

intelmq-mailgen (1.3.3-1) stable; urgency=medium

  * Allow passing templates as parameters

 -- Sebastian Wagner <swagner@intevation.de>  Wed, 21 Jun 2023 15:11:50 +0200

intelmq-mailgen (1.3.2-1) stable; urgency=medium
