@@ -11,7 +11,9 @@ intelmq-mailgen (1.3.7-1) UNRELEASED; urgency=medium
     * Fix script to create `ip_endpoint` as superuser
   * tests:
     * fix runners
-  * cli interface: better error message when format scripts did not generate a notification
+  * cli interface:
+    * better error message when format scripts did not generate a notification
+    * in Dry runs and debug logging level, also log envelop to addresses if set
 
  -- Sebastian Wagner <swagner@intevation.de>  Tue, 18 Mar 2025 09:23:02 +0100
 
